<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".FunFactsActivity"
    android:background="@android:color/holo_green_light">

    <TextView
        android:text="@string/header_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mainHeaderTop"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_centerHorizontal="true"
        android:textSize="36sp" />

    <Button
        android:id="@+id/btnResponse"
        android:text="@string/btn_response"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_rounded"
        android:textStyle="bold"
        android:paddingLeft="5dp"
        android:paddingRight="6dp" />

    <Button
        android:id="@+id/btnCancel"
        android:text="@string/btn_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_above="@+id/btnResponse"
        android:background="@drawable/button_rounded"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_alignRight="@+id/btnResponse"
        android:layout_alignEnd="@+id/btnResponse"
        android:layout_alignLeft="@+id/btnResponse"
        android:layout_alignStart="@+id/btnResponse" />

</RelativeLayout>
